serving loganstore.html

--- a/LoganStore.html
+++ b/LoganStore.html
@@ -10,13 +10,15 @@
         var DY = DY || {};
         DY.recommendationContext = {"type": "HOMEPAGE"};
     </script>
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_dynamic.js"></script>
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_static.js"></script>
     <script src="LoganStore.js"></script>
 </head>
-<body>
+<body> 
     <h1>Logie Outfitters</h1>    
     <a id="link_dy_hero_banner_title">    
         <div id="dy_hero_banner">      
-            <div id="dy_hero_banner_texts">        
+                            <div id="dy_hero_banner_texts">        
                 <div id="dy_hero_banner_title">Look Like Logie</div>
                 <div id="dy_hero_banner_subtitle">Set the tone of elegance</div>
                 <a id="dy_hero_banner_button" href="productpage.html">SHOP THE GOODS</a>
