--- a/productpage.html
+++ b/productpage.html
@@ -10,6 +10,8 @@
         window.DY = window.DY || {}; 
         DY.recommendationContext = { type: "PRODUCT", data: ['SKU123'] }; 
     </script>
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_dynamic.js"></script>
+    <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_static.js"></script>
     <script src="LoganStore.js"></script>
 </head>
 <body>
