--- a/productpage.html
+++ b/productpage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Products</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="LoganStore.css" />
     <script type="text/javascript">
         window.DY = window.DY || {}; 
         DY.recommendationContext = { type: "PRODUCT", data: ['SKU123'] }; 
