added PLP and several PDPs

--- a/LoganStore.html
+++ b/LoganStore.html
@@ -21,7 +21,7 @@
                             <div id="dy_hero_banner_texts">        
                 <div id="dy_hero_banner_title">Look Like Logie</div>
                 <div id="dy_hero_banner_subtitle">Set the tone of elegance</div>
-                <a id="dy_hero_banner_button" href="productpage.html">SHOP THE GOODS</a>
+                <a id="dy_hero_banner_button" href="productlistpage.html">SHOP THE GOODS</a>
             </div>    
         </div>
     </a>
