--- a/product-blue.html
+++ b/product-blue.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="LoganStore.css" />
     <script type="text/javascript">
         window.DY = window.DY || {}; 
-        DY.recommendationContext = { type: "PRODUCT", data: ['WSH04'] }; 
+        DY.recommendationContext = { type: "PRODUCT", data: ['WSH09'] }; 
     </script>
     <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_dynamic.js"></script>
     <script type="text/javascript" src="//cdn.dynamicyield.com/api/8770334/api_static.js"></script>
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div id="page_title">
-        Artemis Running Short
+        Mimi All-Purpose Short
     </div>
-    <img src="http://search.dynamic-yield.com/pub/media/catalog/product/w/s/wsh04-black_main.jpg" width="500px" height="auto">
+    <img src="http://search.dynamic-yield.com/pub/media/catalog/product/w/s/wsh09-gray_main.jpg" width="500px" height="auto">
     <button id="add_to_cart" onclick="addToCart()"> Add to Cart </button>
 </body>
 </html>
